src/OpenCvSharp/Internal/PInvoke/NativeMethods/imgproc/NativeMethods_imgproc_Subdiv2D.cs

using System.Runtime.CompilerServices;
using System.Runtime.InteropServices;

#pragma warning disable 1591
#pragma warning disable CA1401 // P/Invokes should not be visible
#pragma warning disable CA1720 // Identifiers should not contain type names
#pragma warning disable IDE1006 // Naming style

namespace OpenCvSharp.Internal;

static partial class NativeMethods
{
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus imgproc_Subdiv2D_new1(out IntPtr returnValue);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus imgproc_Subdiv2D_new2(Rect rect, out IntPtr returnValue);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus imgproc_Subdiv2D_new3(Rect2f rect, out IntPtr returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus imgproc_Subdiv2D_delete(IntPtr obj);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus imgproc_Subdiv2D_initDelaunay1(OpenCvSafeHandle obj, Rect rect);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus imgproc_Subdiv2D_initDelaunay2(OpenCvSafeHandle obj, Rect2f rect);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus imgproc_Subdiv2D_insert1(OpenCvSafeHandle obj, Point2f pt, out int returnValue);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus imgproc_Subdiv2D_insert2(
        OpenCvSafeHandle obj, [MarshalAs(UnmanagedType.LPArray)] Point2f[] ptArray, int length);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus imgproc_Subdiv2D_locate(OpenCvSafeHandle obj, Point2f pt, out int edge, out int vertex, out int returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus imgproc_Subdiv2D_findNearest(OpenCvSafeHandle obj, Point2f pt, out Point2f nearestPt, out int returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus imgproc_Subdiv2D_getEdgeList(OpenCvSafeHandle obj, IntPtr edgeList);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus imgproc_Subdiv2D_getLeadingEdgeList(OpenCvSafeHandle obj, IntPtr leadingEdgeList);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus imgproc_Subdiv2D_getTriangleList(OpenCvSafeHandle obj, IntPtr triangleList);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus imgproc_Subdiv2D_getVoronoiFacetList(
        OpenCvSafeHandle obj, [MarshalAs(UnmanagedType.LPArray), In] int[]? idx, int idxCount,
        IntPtr facetList, IntPtr facetCenters);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus imgproc_Subdiv2D_getVertex(OpenCvSafeHandle obj, int vertex, out int firstEdge, out Point2f returnValue);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus imgproc_Subdiv2D_getEdge(OpenCvSafeHandle obj, int edge, int nextEdgeType, out int returnValue);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus imgproc_Subdiv2D_nextEdge(OpenCvSafeHandle obj, int edge, out int returnValue);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus imgproc_Subdiv2D_rotateEdge(OpenCvSafeHandle obj, int edge, int rotate, out int returnValue);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus imgproc_Subdiv2D_symEdge(OpenCvSafeHandle obj, int edge, out int returnValue);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus imgproc_Subdiv2D_edgeOrg(OpenCvSafeHandle obj, int edge, out Point2f orgPt, out int returnValue);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus imgproc_Subdiv2D_edgeDst(OpenCvSafeHandle obj, int edge, out Point2f dstPt, out int returnValue);

}
